Add NBT and build script.